--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "devDependencies": {
         "husky": "^3.0.9",
         "lint-staged": "^9.4.2",
-        "prettier": "^1.18.2"
+        "prettier": "^1.18.2",
+        "rollup-plugin-dotenv": "^0.2.0"
     },
     "prettier": {
         "trailingComma": "es5",
