--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "dependencies": {
         "@stencil/core": "1.7.4",
         "@stencil/router": "^1.0.1",
+        "axios": "^0.19.0",
         "three": "^0.109.0"
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/node": "^12.11.7",
         "husky": "^3.0.9",
         "lint-staged": "^9.4.2",
         "prettier": "^1.18.2",
